# polari

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt  run.py
examples/: example_requirements.txt  lang.py  script.py  sentiment.py  utils.py
polari/: __init__.py  utils.py
polari/examples/: datasets.py
src/: lib.rs  utils.rs
src/lang/: builder.rs  mod.rs
src/script/: mod.rs
src/sentiment/: mod.rs
tests/: test_lang.py  test_requirements.txt  test_script.py  test_sentiment.py
