[package]
name = "polari"
version = "0.1.0"
edition = "2021"

[lib]
name = "polari"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.13.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.39.2", default-features = false }
whatlang = "0.16.4"
lingua = "1.6.2"
whichlang = "0.1.0"
isolang = "2.4.0"
vader_sentiment = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
